--- a/app/composer.json
+++ b/app/composer.json
@@ -16,6 +16,7 @@
         "symfony/flex": "^2",
         "symfony/form": "8.0.*",
         "symfony/framework-bundle": "8.0.*",
+        "symfony/mailer": "8.*",
         "symfony/runtime": "8.0.*",
         "symfony/security-csrf": "8.0.*",
         "symfony/serializer": "8.*",
