feat(factory): create factories and change subscribe form

--- a/app/composer.json
+++ b/app/composer.json
@@ -82,6 +82,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "*",
-        "symfony/maker-bundle": "^1.65"
+        "symfony/maker-bundle": "^1.65",
+        "zenstruck/foundry": "*"
     }
 }
